--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4655,13 +4655,13 @@ span {
     display: inline-block;
     padding: 0.4rem;
     transition: all 0.25s ease 0s;
-    border-bottom: 2px solid transparent;
+    border-bottom: 2px solid transparent; 
 }
 
 .top-bar__nav-list a:hover {
     transform: scale(1.2);
     filter: brightness(140%);
-    border-bottom: 2px solid rgb(51, 51, 51);
+    /* border-bottom: 2px solid rgb(51, 51, 51); */
 }
 
 .hamburger {
@@ -5167,3 +5167,101 @@ only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
 /* Styles */
 }
+
+
+
+
+
+@media (max-width:800px){
+    
+   
+   
+   
+     
+   
+   
+    .top-bar__nav-list .sub-menu{
+    position: relative;
+    top: 0;
+    box-shadow: none;
+    display: none;
+  }
+  .top-bar__nav-list .sub-menu li{
+    border-bottom: none;
+  
+  }
+    
+  }
+ 
+
+  @media (max-width:320px){
+    .top-bar__nav-list a {
+        font-size: 0.5rem !important; 
+    }
+    .top-bar__nav-list li {
+        padding: .5em !important;
+       
+    }
+    #header nav ul li > ul {
+        display: flex !important;
+       
+    }
+    .top-bar__nav-list .sub-menu {
+        align-items: center !important;
+        padding-left: 6rem !important ;
+    }
+  }
+  @media (max-width:375px){
+    .top-bar__nav-list a {
+        font-size: 0.5rem !important; 
+    }
+    .top-bar__nav-list li {
+        padding: .5em !important;
+    }
+    #header nav ul li > ul {
+        display: flex !important;  
+    }
+    .top-bar__nav-list .sub-menu {
+         
+        align-items: center ;
+        padding-left: 6rem ;
+    }
+  }
+  @media (max-width:1440px){
+    .top-bar__nav-list a {
+        font-size: 0.5rem !important; 
+    }
+    .top-bar__nav-list li {
+        padding: .5em !important;
+       
+    }
+    #header nav ul li > ul {
+        display: flex !important;
+       
+    }
+    .top-bar__nav-list .sub-menu {
+            align-items: center ;
+            padding-left: 6rem ;
+    
+    }
+  }
+  @media (max-width:1920px){
+    .top-bar__nav-list a {
+        font-size: 0.5rem !important; 
+    }
+    .top-bar__nav-list li {
+        padding: .5em !important;
+       
+    }
+    #header nav ul li > ul {
+        display: flex !important;
+      
+    }
+    .top-bar__nav-list .sub-menu {
+        align-items: center ;
+        padding-left: 6rem ;
+    }
+  }
+  
+  
+  
